[package]
name = "sdk_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.149" }
sha2 = { version= "0.10.6" }
fuels = { version = "0.34", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
rand = { version = "0.8.5" }
lazy_static = { version = "1.4.0" }
chrono = "0.4.23"
async-std = "0.99.5"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
